cmake_minimum_required(VERSION 3.24)
project(testing_system_client)
if (WIN32)
    set (BOOST_ROOT "C:/boost_1_80_0/")
endif()
find_package(Boost 1.80.0)
set (Boost_USE_STATIC_LIBS OFF)
set (Boost_USE_MULTITHREADED ON)
set (Boost_USE_STATIC_RUNTIME OFF)
set (CMAKE_CXX_STANDARD 20)
set (Boost_NO_SYSTEM_PATHS ON)
set (Boost_USE_STATIC_LIBS ON)
set (BOOST_ALL_DYN_LINK OFF)
add_executable(testing_system_client main.cpp)
target_include_directories(testing_system_client PRIVATE ${Boost_INCLUDE_DIRS})
