cmake_minimum_required(VERSION 3.24)
project(testing_system_client)
if (WIN32)
    set (BOOST_ROOT "C:/boost_1_80_0/")
    find_package(Boost 1.80.0)
endif()
set (CMAKE_CXX_STANDARD 17)
add_executable(testing_system_client main.cpp)
target_include_directories(testing_system_client PRIVATE ${Boost_INCLUDE_DIRS})
